--- a/3D Basics/3D Basics.vcxproj
+++ b/3D Basics/3D Basics.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F4529498-C95D-408D-80A6-017C1C085D92}</ProjectGuid>
     <RootNamespace>RotatingShapes</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
     <ProjectName>3D Basics</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,6 +146,7 @@
     <ClCompile Include="AudioSystem.cpp" />
     <ClCompile Include="FileWriting.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Physics.cpp" />
     <ClCompile Include="UI_Image.cpp" />
     <ClCompile Include="Collider_Box2D.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -176,6 +177,8 @@
     <ClInclude Include="AudioSound.h" />
     <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="FileWriting.h" />
+    <ClInclude Include="Physics.h" />
+    <ClInclude Include="Triangle.h" />
     <ClInclude Include="UI_Image.h" />
     <ClInclude Include="Collider_Box2D.h" />
     <ClInclude Include="Camera.h" />
