--- a/3D Basics/3D Basics.vcxproj.filters
+++ b/3D Basics/3D Basics.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source\3D Game</Filter>
     </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>Source\Physics-Testing</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -185,6 +188,12 @@
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="FileWriting.h" />
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files\Physics-Testing</Filter>
+    </ClInclude>
+    <ClInclude Include="Triangle.h">
+      <Filter>Header Files\Physics-Testing</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="FragmentShader.fs">
@@ -281,6 +290,12 @@
     </Filter>
     <Filter Include="Header Files\Engine\UI">
       <UniqueIdentifier>{c5d2962d-0bda-481c-bbf7-de8a75150da6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Physics-Testing">
+      <UniqueIdentifier>{31944278-b700-4710-981b-15c98c9b6c58}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Physics-Testing">
+      <UniqueIdentifier>{c0b328ec-1135-4ae3-bc95-e122c31eb693}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
